# dbt-agent-skills

./: .changie.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  POWER.md  README.md  RELEASING.md  dev-requirements.txt  pyproject.toml  tessl.json  tile.json
.changes/unreleased/: Docs-20260130-093412.yaml  Features-20260206-084344.yaml  Features-20260302-165317.yaml  Features-20260303-120000.yaml  Features-20260410-145221.yaml  Features-20260602-000000.yaml  Features-20260616-101133.yaml  Fixes-20260203-104922.yaml  Fixes-20260604-000000.yaml  Fixes-20260604-000001.yaml  Under the Hood-20260211-085024.yaml  Under the Hood-20260217-122047.yaml  Under the Hood-20260217-132356.yaml  Under the Hood-20260217-143356.yaml  Under the Hood-20260409-222432.yaml
.claude-plugin/: marketplace.json  plugin.json
.cortex/skills/: adding-dbt-unit-test  answering-natural-language-questions-with-dbt  building-dbt-semantic-layer  configuring-dbt-mcp-server  creating-mermaid-dbt-dag  fetching-dbt-docs  migrating-dbt-core-to-fusion  migrating-dbt-project-across-platforms  (+5 more)
.cursor-plugin/: marketplace.json
.github/: pull_request_template.md
agents/: dbt-guide.md
dbt-fusion-migration/: SKILL.md
evals/: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
integration_tests/: Dockerfile  README.md  run.sh  validate-skill-md.sh
scripts/: README.md  generate_marketplace.py  validate_repo.py
using-dbt-for-analytics-engineering/: SKILL.md  discovering-data.md  evaluating-impact-of-a-dbt-model-change.md  planning-dbt-models.md  writing-data-tests.md  writing-documentation.md
(+236 files in other folders)
