[project]
name = "dbt-skills"
version = "0.1.0"
description = "Agent Skills for working with dbt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "typer>=0.9.0",
]

[project.scripts]
skill-eval = "skill_eval.cli:app"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "skills-ref @ git+https://github.com/agentskills/agentskills.git#subdirectory=skills-ref",
    "pytest>=8.0",
]
